--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 
 <body>
-  <h1>Fimoha</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
-
+  <p>This is just a test site /work in progress. </p>
+  <p>--Headers test--</p>
+  <h1>Kiwi Bird<h1>
+  <h2>latin name Apteryx<h1>
+  <h3>lives in New Zealand<h3>
 </html>
