--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
   <h1>Kiwi Bird<h1>
   <h2>latin name Apteryx<h1>
   <h3>lives in New Zealand<h3>
+  <img src="https://fimoha.github.io/image.jpg" />
 </html>
