--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 
 <body>
   <p>fimoha home page</p>
-  <p>headings / font size test</p>
+  <br /> 
+  <p>normal text</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <br /> 
 
-  <h1>Tell me not, in mournful numbers,</h1>
-  <h2>Life is but an empty dream!</h2>
-  <h3>For the soul is dead that slumbers,</h3>
-  <h4>And things are not what they seem.</h4>
+  <p>heagings</p>
+
+  <h1>Tell me not, in mournful numbers,<h1>
+  <h2>Life is but an empty dream!<h1>
+  <h3>For the soul is dead that slumbers,<h3>
+  <h4>And things are not what they seem.<h4>
 
   <p>image test</p>
   <img src="https://fimoha.github.io/image.jpg" />
 </html>
+
