--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <p>heagings</p>
 
-  <h1>Tell me not, in mournful numbers,<h1>
-  <h2>Life is but an empty dream!<h1>
-  <h3>For the soul is dead that slumbers,<h3>
-  <h4>And things are not what they seem.<h4>
+  <h1>Tell me not, in mournful numbers,</h1>
+  <h2>Life is but an empty dream!</h2>
+  <h3>For the soul is dead that slumbers,</h3>
+  <h4>And things are not what they seem.</h4>
 
   <p>image test</p>
   <img src="https://fimoha.github.io/image.jpg" />
