--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <html>
 
 <body>
-  <p>fimoha home page</p>
+  <p>fimoha*github*test</p>
   <br /> 
   <p>normal text</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
   <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <br /> 
 
+  <b>bold text</b>
+  <b>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</b>    
+  <br /> 
+  
   <p>heagings</p>
 
   <h1>Tell me not, in mournful numbers,</h1>
