--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <body>
-  <p>fimoha*github*test</p>
+  <p>test home page</p>
+  <p>fimoha ver 1.0</p>
   <br /> 
   <p>normal text</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
