--- a/index.html
+++ b/index.html
@@ -4,17 +4,12 @@
   <p>test home page</p>
   <p>Fimoha ver 1.0</p>
   <br /> 
-  <p>normal text</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>this is normal text</p>
   <br /> 
-
-  <b>bold text</b>
-  <b>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</b>    
+  <b>this is bold text</b>
   <br /> 
   
-  <p>heagings</p>
-
+  <p>these are headings sizes</p>
   <h1>Tell me not, in mournful numbers,</h1>
   <h2>Life is but an empty dream!</h2>
   <h3>For the soul is dead that slumbers,</h3>
